* Wrap various snippets from the JEP document into test cases * Forbid attempts to synchronize on an instance of a value class. (synchronized instance methods are still not complained about) * Kludge for preview Java runtime access